--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -5,8 +5,9 @@
   |============================
 */
 @import url('./reset.css');
-@import url('./vite-promo.css');
+
 @import url('./header.css');
+@import url('./food-list.css');
 
 :root {
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
